src/app/landing/home/home.component.css
.landing-page {
  background: #f1e7d0;
  padding: 0 15px;
  margin-top: 6.3rem;
}

.landing-page .container {
  padding: 30px 0;
}

h1, h2, h3 {
  color: var(--primary-color);
  margin-bottom: 1rem; /* Use rem for consistency */
  font-weight: 600;
}

section {
  padding: 1rem 0; /* Same top and bottom padding for all sections */
  margin-bottom: 1rem; /* Consistent spacing between sections */
}

.hero {
  text-align: center;
  margin-bottom: 1rem; /* Ensure spacing below the hero section */
}

.hero-background {
  background: url('../../../assets/images/img_6.png') no-repeat center center;
  background-size: cover;
  padding: 100px 20px;
  color: white;
  border-radius: 10px;
  position: relative;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.hero-background h1,
.hero-background p ,
.hero-background a {
  position: relative;
  z-index: 2;
  color: white;
}

.hero-background::before {
  content: '';
  position: absolute;
  inset: 0;
  background: rgba(0, 0, 0, 0.5);
  border-radius: 10px;
}

.cta-button {
  background-color: var(--accent-color);
  padding: 0.75rem 1.5rem;
  color: white;
  text-decoration: none;
  border-radius: 5px;
  display: inline-block;
  transition: background-color 0.3s ease;
}

.cta-button:hover {
  background-color: #ff4757;
}

.categories {
  margin-bottom: 1rem;
}

.category-grid, .discount-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  gap: 20px;
  margin-top: 1rem;
}

.category-card, .discount-card {
  background: white;
  padding: 15px;
  border-radius: 10px;
  transition: transform 0.1s ease;
}

.category-card:hover, .discount-card:hover {
  transform: translateY(-5px);
}

.category-card img, .discount-card img {
  width: 100%;
  height: 150px;
  object-fit: scale-down;
}

.category-card h3, .discount-card h3 {
  padding: 10px;
  margin: 0;
  text-align: center;
  font-size: 1.25rem;
}

.age-group-slider, .toy-carousel, .review-carousel {
  display: flex;
  overflow-x: auto;
  gap: 20px;
  margin-top: 1rem;
  padding-bottom: 1rem;
  scroll-snap-type: x mandatory;
}

.age-group-slider::-webkit-scrollbar, .toy-carousel::-webkit-scrollbar, .review-carousel::-webkit-scrollbar {
  width: 5px;
  height: 100%;
  scroll-behavior: smooth;
}

.age-group-slider::-webkit-scrollbar-track, .toy-carousel::-webkit-scrollbar-track, .review-carousel::-webkit-scrollbar-track {
  background-color: #eee;
}

.age-group-slider::-webkit-scrollbar-thumb, .toy-carousel::-webkit-scrollbar-thumb, .review-carousel::-webkit-scrollbar-thumb {
  background-color: #ccc;
}

.age-group-card, .toy-card, .review-card {
  /*flex: 0 0 auto;*/
  /*width: 340px;*/
  background-color: white;
  border-radius: 10px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  scroll-snap-align: start;
  padding: 1rem;
  margin-right: 1rem;
}

.age-group-card img, .toy-card img, .review-card img {
  width: 100%;
  border-radius: 10px 10px 0 0;
  height: 165px;
}

.toy-card h3 {
  font-size: 1.25rem;
}

.age-group-card {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100px;
  font-size: 1.2em;
  font-weight: bold;
  color: var(--primary-color);
}

.rating {
  color: gold;
  font-size: 1.2em;
}

.mrp-price {
  text-decoration: line-through;
  color: #888;
  margin-bottom: 0.25rem;
}

.discounted-price {
  font-weight: bold;
  color: var(--accent-color);
  margin-bottom: 0.25rem;
}

.discount {
  font-size: 0.8em;
  color: var(--accent-color);
}

.discount-percentage {
  background-color: var(--accent-color);
  color: white;
  padding: 5px;
  border-radius: 5px;
  font-weight: bold;
}

.customer-name {
  font-style: italic;
  text-align: right;
}

.informative-section {
  margin-bottom: 1rem;
  border-radius: 10px;
  background: rgb(228,228,228);
  background: linear-gradient(90deg, rgb(252, 252, 252) 0%, rgb(99, 98, 98) 35%, rgb(61, 40, 20) 100%);
}

.informative-content {
  display: flex;
  gap: 20px;
  align-items: center;
}

.text-content {
  flex: 3;
  color: #e6dbb9;
}

.text-content h2 {
  color: #e6dbb9;
}

.image-content {
  flex: 1;
}

.image-content img {
  width: 200px;
  border-radius: 10px;
}

.banner {
  background-color: #f9f9f9; /* Light background color */
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.banner-section {
  margin-bottom: 1rem;
}

.informative-section, .banner {
  padding: 1rem; /* Ensure consistent padding inside informative and banner sections */
}

.toy-carousel .carousel-arrow {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  background-color: rgba(0, 0, 0, 0.5);
  color: white;
  padding: 10px 15px;
  border-radius: 5px;
  cursor: pointer;
  z-index: 3;
}

.toy-carousel .carousel-arrow.left {
  left: 5px;
}

.toy-carousel .carousel-arrow.right {
  right: 5px;
}

.featured-toys {
  position: relative;
  overflow: hidden;
}

.toy-carousel {
  display: flex;
  gap: 20px;
  transition: transform 0.3s ease-in-out;
}

.toy-card {
  flex: 0 0 calc(20% - 16px);
  min-width: 250px;
  background-color: white;
  border-radius: 10px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  padding: 1rem;
  margin-right: 1rem;
  height: 350px; /* Fixed card height */
  display: flex;
  flex-direction: column;
}

.toy-card .image-container {
  max-height: 165px;
  min-height: 165px;
  overflow: hidden;
}

.toy-card img {
  width: 100%;
  height: 100%;
}

.carousel-arrow {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  background-color: rgba(0, 0, 0, 0.5);
  color: white;
  padding: 10px 15px;
  border-radius: 10px;
  cursor: pointer;
  z-index: 3;
}

.carousel-arrow.left {
  left: 10px;
}

.carousel-arrow.right {
  right: 10px;
}

/* Media queries for responsiveness */

@media (max-width: 1440px) { /* Large desktop */
  .toy-card {
    flex: 0 0 calc(25% - 15px); /* 4.5 views */
  }
}

@media (max-width: 1024px) { /* Small desktop */
  .toy-card {
    flex: 0 0 calc(33.3333% - 13.3333px); /* 3.5 views */
  }
}

@media (max-width: 768px) { /* Tablet */
  .toy-card {
    flex: 0 0 calc(50% - 10px); /* 3 views */
  }
}

@media (max-width: 768px) {
  section {
    padding: 1rem 0;
    margin-bottom: 1rem;
  }

  .category-grid, .discount-grid {
    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
  }

  .informative-content {
    flex-direction: column;
    align-items: center;
  }

  .text-content, .image-content {
    flex: none;
  }

   h1 {
      font-size: 1.8rem;
    }

    h2 {
      font-size: 1.6rem;
    }

    .age-group-card, .toy-card, .review-card {
      min-width: 250px;
    }
}

